Fix crash when NotificationCollector does not have Connection

This can happen when the NotificationCollector is invoked internally
for instance from the SearchManager.

BUG: 397239
FIXED-IN: 5.9.1